--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
-    "jest": "^29.1.2"
+    "jest": "^29.1.2",
+    "puppeteer": "^18.0.5"
   }
 }
