--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
     "jest": "^29.1.2",
     "portfinder": "^1.0.32",
     "puppeteer": "^18.0.5"
