--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cat-names": "^3.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3"
   },
   "devDependencies": {
     "eslint": "^8.24.0",
