--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cat-names": "^3.1.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
